# JuniorPiThon

./: .gitignore  README.md  pyproject.toml
src/juniorpithon/: app_main.py
src/juniorpithon/core/: token_economy.py
src/juniorpithon/ide/: dynamic_sandbox.py
src/juniorpithon/modules/: edge_engines.py  python_ide.py
src/juniorpithon/pi_network/: pi_sdk.py
src/juniorpithon/static/: app.html  index.html
src/juniorpithon/terminals/: dynamic_dashboard.py
